<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.hindsightsoftware</groupId>
    <artifactId>benchmark</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <scala.version>2.12.3</scala.version>
        <encoding>UTF-8</encoding>
        <gatling.version>2.3.0</gatling.version>
        <gatling-plugin.version>2.2.4</gatling-plugin.version>
        <scala-maven-plugin.version>3.2.2</scala-maven-plugin.version>

        <!-- Gatling specific options -->
        <!-- <gatling.local.home>${project.basedir}/gatling/gatling-charts-highcharts-bundle-${gatling.version}/bin/gatling.sh</gatling.local.home>
        <gatling.install.script>${project.basedir}/src/test/resources/install-gatling.sh</gatling.install.script>
        <gatling.root>gatling-charts-highcharts-bundle-${gatling.version}</gatling.root>
        <gatling.java.opts>-Xms1g -Xmx4g</gatling.java.opts> -->

        <!-- Main settings -->
        <behaveProBuild>1006104</behaveProBuild>

        <skipDownloadGatling>false</skipDownloadGatling>
        <skipCloudFormation>false</skipCloudFormation>
        <skipCloudFormationTearDown>false</skipCloudFormationTearDown>
        <skipAddonUpload>false</skipAddonUpload>
        <skipAddonLicense>false</skipAddonLicense>

        <!-- For remote profile only -->
        <dbMasterUserPassword>jirapassword</dbMasterUserPassword>
        <dbMasterPassword>jirapassword</dbMasterPassword>
        <dbRestoreBucket>behave-pro-server-performance-dataset</dbRestoreBucket>
        <dbRestorePsqlFileName>dataset-large-jira-with-behave-pro.psql</dbRestorePsqlFileName>
        <dbRestoreIndexesFileName>dataset-large-jira-indexes.tar.gz</dbRestoreIndexesFileName>
        <s3RestoreIndexesEnabled>true</s3RestoreIndexesEnabled>
        <s3RestoreDatabaseEnabled>true</s3RestoreDatabaseEnabled>
        <keyPairName>jira-keypair</keyPairName>
        <sshPrivateKeyFile>${project.basedir}/src/test/resources/jira-keypair.pem</sshPrivateKeyFile>
        <s3AwsConfig>${project.basedir}/src/test/resources/s3.aws.user/config</s3AwsConfig>
        <s3AwsCredentials>${project.basedir}/src/test/resources/s3.aws.user/credentials</s3AwsCredentials>
        <jiraMinNodes>1</jiraMinNodes>
        <jiraMaxNodes>1</jiraMaxNodes>
        <jiraVersion>7.13.1</jiraVersion>
        <jiraAvailabilityZones>us-east-2a,us-east-2b</jiraAvailabilityZones>

        <!-- EA's Gtaling related properties (Remote only) -->
        <ssh.user>ec2-user</ssh.user>
        <ssh.private.key>${project.basedir}/src/test/resources/jira-keypair.pem</ssh.private.key>
        <ec2.key.pair.name>jira-keypair</ec2.key.pair.name>
        <ec2.security.group>default</ec2.security.group>
        <ec2.instance.count>1</ec2.instance.count>
        <ec2.end.point>https://ec2.us-east-2.amazonaws.com</ec2.end.point>
        <ec2.ami.id>ami-0de7daa7385332688</ec2.ami.id>
        <ec2.force.termination>true</ec2.force.termination>
		<ec2.keep.alive>true</ec2.keep.alive>
		<ec2.instance.type>t2.small</ec2.instance.type>
        <gatling.local.home>${project.basedir}/gatling/gatling-charts-highcharts-bundle-2.3.0/bin/gatling.sh</gatling.local.home>
        <gatling.install.script>${project.basedir}/src/test/resources/install-gatling.sh</gatling.install.script>
        <gatling.root>gatling-charts-highcharts-bundle-2.3.0</gatling.root>
        <gatling.java.opts> -Xms1g -Xmx25g -Xss8M -XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=256M</gatling.java.opts>
        <gatling.simulation>com.hindsightsoftware.benchmark.BehaveProSimulation</gatling.simulation>
        <s3.upload.enabled>true</s3.upload.enabled>
        <s3.bucket>behave-pro-loadtest-results</s3.bucket>
        <s3.subfolder>gatling</s3.subfolder>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.gatling</groupId>
                <artifactId>gatling-app</artifactId>
                <version>${gatling.version}</version>
            </dependency>
            <dependency>
                <groupId>io.gatling</groupId>
                <artifactId>gatling-recorder</artifactId>
                <version>${gatling.version}</version>
            </dependency>
            <dependency>
                <groupId>io.gatling.highcharts</groupId>
                <artifactId>gatling-charts-highcharts</artifactId>
                <version>${gatling.version}</version>
            </dependency>
            <dependency>
                <groupId>org.scala-lang</groupId>
                <artifactId>scala-library</artifactId>
                <version>${scala.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>io.gatling.highcharts</groupId>
            <artifactId>gatling-charts-highcharts</artifactId>
        </dependency>
        <dependency>
            <groupId>io.gatling</groupId>
            <artifactId>gatling-app</artifactId>
        </dependency>
        <dependency>
            <groupId>io.gatling</groupId>
            <artifactId>gatling-recorder</artifactId>
        </dependency>
        <dependency>
            <groupId>org.scala-lang</groupId>
            <artifactId>scala-library</artifactId>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!-- Download gatling standalone application based on version provided in this pom.xml -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.4.0</version>
                <executions>
                    <execution>
                        <id>exec-download-gatling</id>
                        <phase>generate-resources</phase>
                        <configuration>
                            <workingDirectory>.</workingDirectory>
                            <executable>src/test/resources/download-gatling.sh</executable>
                            <arguments>
                                <argument>${gatling.version}</argument>
                            </arguments>
                            <skip>${skipDownloadGatling}</skip>
                        </configuration>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <!-- Default profile to run Gatling tests locally -->
        <profile>
            <id>jira-profile</id>
            <properties>
                <simulationName>com.hindsightsoftware.benchmark.JiraSimulation</simulationName>
            </properties>
        </profile>
        <profile>
            <id>behave-profile</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <simulationName>com.hindsightsoftware.benchmark.BehaveProSimulation</simulationName>
            </properties>
        </profile>
        <profile>
            <id>local</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>net.alchim31.maven</groupId>
                        <artifactId>scala-maven-plugin</artifactId>
                        <version>${scala-maven-plugin.version}</version>
                    </plugin>
                    <!-- Plugin for uploading addons into JIRA -->
                    <plugin>
                        <groupId>com.hindsightsoftware.upkeep</groupId>
                        <artifactId>jira-upload-addon-maven-plugin</artifactId>
                        <version>1.0</version>
                        <executions>
                            <execution>
                                <id>upload-jira-addon</id>
                                <phase>pre-integration-test</phase>
                                <goals>
                                    <goal>upload</goal>
                                </goals>
                                <configuration>
                                    <addonUrl>https://marketplace.atlassian.com/download/apps/1211664/version/${behaveProBuild}</addonUrl>
                                    <addonKey>pro.behave.hosted-key</addonKey>
                                    <skip>${skipAddonUpload}</skip>
                                    <addonLicenseSkip>${skipAddonLicense}</addonLicenseSkip>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>io.gatling</groupId>
                        <artifactId>gatling-maven-plugin</artifactId>
                        <version>${gatling-plugin.version}</version>
                        <executions>
                            <execution>
                                <configuration>
                                    <simulationClass>${simulationName}</simulationClass>
                                </configuration>
                                <phase>integration-test</phase>
                                <goals>
                                    <goal>integration-test</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <!-- Alternative profile to run Gatling tests on EC2 instances -->
        <profile>
            <id>remote</id>
            <build>
                <plugins>
                    <!-- Plugin for creating JIRA Data Center on AWS -->
                    <plugin>
                        <groupId>com.hindsightsoftware.upkeep</groupId>
                        <artifactId>jira-cloudformation-maven-plugin</artifactId>
                        <version>1.0</version>
                        <executions>
                            <execution>
                                <id>start-cloud-formation</id>
                                <phase>pre-integration-test</phase>
                                <goals>
                                    <goal>start</goal>
                                </goals>
                                <configuration>
                                    <parameters>
                                        <AssociatePublicIpAddress>true</AssociatePublicIpAddress>
                                        <DBMasterUserPassword>${dbMasterUserPassword}</DBMasterUserPassword>
                                        <DBPassword>${dbMasterPassword}</DBPassword>
                                        <KeyPairName>${keyPairName}</KeyPairName>
                                        <CustomDnsName/>
                                        <JiraProduct>Software</JiraProduct>
                                        <JiraVersion>${jiraVersion}</JiraVersion>
                                        <ClusterNodeMin>${jiraMinNodes}</ClusterNodeMin>
                                        <ClusterNodeMax>${jiraMaxNodes}</ClusterNodeMax>
                                        <CidrBlock>0.0.0.0/0</CidrBlock>
                                        <AccessCIDR>0.0.0.0/0</AccessCIDR>
                                        <AvailabilityZones>${jiraAvailabilityZones}</AvailabilityZones>
                                    </parameters>
                                    <exports>
                                        <param>JIRAURL</param>
                                        <param>LoadBalancerURL</param>
                                    </exports>
                                    <s3RestoreBucket>${dbRestoreBucket}</s3RestoreBucket>
                                    <s3RestorePsqlFileName>${dbRestorePsqlFileName}</s3RestorePsqlFileName>
                                    <s3RestoreIndexesFileName>${dbRestoreIndexesFileName}</s3RestoreIndexesFileName>
                                    <s3RestoreDatabaseEnabled>${s3RestoreDatabaseEnabled}</s3RestoreDatabaseEnabled>
                                    <s3RestoreIndexesEnabled>${s3RestoreIndexesEnabled}</s3RestoreIndexesEnabled>
                                    <rdsPassword>${dbMasterPassword}</rdsPassword>
                                    <sshPrivateKeyFile>${sshPrivateKeyFile}</sshPrivateKeyFile>
                                    <s3AwsCredentials>${s3AwsCredentials}</s3AwsCredentials>
                                    <s3AwsConfig>${s3AwsConfig}</s3AwsConfig>
                                    <skip>${skipCloudFormation}</skip>
                                </configuration>
                            </execution>
                            <execution>
                                <id>stop-cloud-formation</id>
                                <phase>post-integration-test</phase>
                                <goals>
                                    <goal>stop</goal>
                                </goals>
                                <configuration>
                                    <skip>${skipCloudFormationTearDown}</skip>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <!-- Plugin for uploading addons into JIRA -->
                    <plugin>
                        <groupId>com.hindsightsoftware.upkeep</groupId>
                        <artifactId>jira-upload-addon-maven-plugin</artifactId>
                        <version>1.0</version>
                        <executions>
                            <execution>
                                <id>upload-jira-addon</id>
                                <phase>pre-integration-test</phase>
                                <goals>
                                    <goal>upload</goal>
                                </goals>
                                <configuration>
                                    <addonUrl>https://marketplace.atlassian.com/download/apps/1211664/version/${behaveProBuild}</addonUrl>
                                    <addonKey>pro.behave.hosted-key</addonKey>
                                    <skip>${skipAddonUpload}</skip>
                                    <addonLicenseSkip>${skipAddonLicense}</addonLicenseSkip>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <!-- Run Gatling tests on EC2 instances -->
                    <plugin>
                        <groupId>com.ea.gatling</groupId>
                        <artifactId>gatling-aws-maven-plugin</artifactId>
                        <version>1.0.14</version>
                        <executions>
                            <execution>
                                <phase>integration-test</phase>
                                <goals>
                                    <goal>execute</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
